Replace characters passed to pick function as list of string in favor of list of characters